--- a/project_report/templates/index.html
+++ b/project_report/templates/index.html
@@ -103,13 +103,14 @@
 
             <h2>Dataset</h2>
             <div class="btn-toolbar mb-2 mb-md-0">
-                <div class="btn-group me-2">
+                <div class="btn-group me-2" align="right">
                     <a type="button" class="btn btn-sm btn-outline-secondary" href="{{url_for('index',page=page-1)}}">Prev</a>
 
                     <a type="button" class="btn btn-sm btn-outline-secondary" href="{{url_for('index',page=page+1)}}">Next</a>
                 </div>
 
             </div>
+            <p align="right">Страница {{page + 1}}</p>
 
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
